--- a/app/views/desks/index.html.erb
+++ b/app/views/desks/index.html.erb
@@ -1,26 +1,37 @@
-<p id="notice"><%= notice %></p>
+<%= render 'user_login_info' %>
 
-<h1>Desks</h1>
+<div class="row mt-2">
+        <div class="col-md-6"> <%= link_to 'Book New Seat', new_desk_path, class: 'btn btn-primary btn-block' %> </div>
+        <div class="col-md-6">
+            <%= link_to 'My Booking',Desk.find_by_user_id(current_user.id), class: 'btn btn-primary btn-block' %>
+         </div>
+</div>
 
-<table>
-  <thead>
+  
+<table class="table table-striped">
+  <thead class="bg-primary">
     <tr>
-      <th>Desk num</th>
-      <th>From</th>
-      <th>Till</th>
-      <th colspan="3"></th>
+      <th>Name</th>
+      <th>Desk</th>
+      <th>From/To</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @desks.each do |desk| %>
-      <tr>
+    <% @desks.each_with_index do |desk, i| %>
+      <% if (i % 2 == 0) %>
+          <tr class= "table-primary ">
+      <% else %>
+          <tr class= "table-info">
+      <% end %>
+        <td><%= desk.user.name %></td>
         <td><%= desk.desk_num %></td>
-        <td><%= desk.from %></td>
-        <td><%= desk.till %></td>
-        <td><%= link_to 'Show', desk %></td>
-        <td><%= link_to 'Edit', edit_desk_path(desk) %></td>
-        <td><%= link_to 'Destroy', desk, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= desk.from_to_date %></td>
+        <td><%= link_to 'View', desk %></td>
+        <!-- <td><%# link_to 'Edit', edit_desk_path(desk) %></td>
+        <td><%# link_to 'Destroy', desk, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +39,4 @@
 
 <br>
 
-<%= link_to 'New Desk', new_desk_path %>
+
